# tcdd-bilet-yer-kontrol

./: .gitignore  Control.py  DriverGet.py  DriverSetting.py  LICENSE  MANIFEST.in  README.md  Rota.py  a.py  appveyor.yml  exe_olustur.bat  gitignore  main.py  pyproject.toml  requirements.txt  requirements_web.txt  start_ui.py
Layouts/: Panel.py  __init__.py
Libs/: TCDD_Selenium.py  __init__.py  list2df.py
backend/: control.py  driver_get.py  driver_setting.py  error_codes.py  route.py  selenium_runner.py  stations.py
desktop_app/: __init__.py  main.py  requirements.txt  ui.py  version.txt
src/: App.css  App.js  Control.py  DriverGet.py  DriverSetting.py  Rota.py  Sehirler.py  TelegramMsg.py  backend.py  error_codes.py  form.ui  index.html  main.py  main.spec  mainwindow.py  package.json  requirements.txt  ui.py  ui_form.py  version.txt
src/api/: search.js
src/frontend/: App.js
src/sound/: notification.mp3:Zone.Identifier
webapp/: __init__.py  main.py  routes.py
webapp/services/: job_manager.py
webapp/static/: app.js  style.css  sw.js
webapp/static/pages/: gizlilik.html  iletisim.html  kullanim-kosullari.html
webapp/templates/: index.html  legal_page.html
